--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ div {
 	position: relative;
 	top:200;
 	border:1px solid #000;
+	background-color:#0EF35F;
 }
 </style></head>
 
@@ -15,7 +16,8 @@ div {
 <div>
 <span>链接</span>
 <ul>
-<li><a herf="/xiaowei/01/001_诗词鉴赏.html">作业一</a></li>
+<li><a href="/xiaowei/01/001_诗词鉴赏.html" >作业一</a></li>
+<li><a href="/xiaowei/02/002.html" >作业二</a></li>
 
 </ul>
 
