--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ div {
 <ul>
 <li><a href="/xiaowei/01/001_诗词鉴赏.html" >作业一</a></li>
 <li><a href="/xiaowei/02/002.html" >作业二</a></li>
+<li><a href="/xiaowei/03/003.html" >作业三  三栏布局</a></li>	
 
 </ul>
 
