--- a/test008.html
+++ b/test008.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>中文</title>
-<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="Normalize.css" />
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/Normalize.css" />
 <style type="text/css">
 .myGutter{
 margin-right: -0px;
