--- a/test008.html
+++ b/test008.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>中文</title>
-<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/CSS/bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/CSS/Normalize.css" />
+<link rel="stylesheet" type="text/css" href=".../bootstrap-3.3.7-dist/CSS/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href=".../bootstrap-3.3.7-dist/CSS/Normalize.css" />
 <style type="text/css">
 .myGutter{
 margin-right: -0px;
@@ -25,7 +25,7 @@ margin:0 5px 5px 0;
   <body>
 <div class="container-fluid">
 <div class="row">
-  <div class="col-xs-6 col-sm-4"><div class="myGutter">Context1</div></div>
+  <div class="col-xs-6 col-sm-4"><div class="myGutter">C1</div></div>
   <div class="col-xs-6 col-sm-4"><div class="myGutter">Context1</div></div>
   <div class="col-xs-12 col-sm-4"><div class="myGutter">Context1</div></div>
 </div>
